--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 	<link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300&display=swap" as="style"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300&display=swap" media="print" onload="this.media='all'"/>
-	<script defer src="loader.js"></script>
+	<script defer type="module" src="loader.js"></script>
 	<title>Bundler for @fregante’s modules</title>
 </head>
 <body class="text-align-center">
